3.01.07 (7-7-2006)
Improved graphics for the voltage strip chart.
Strip charts start reading from the right.
Strip charts maintain the correct time-range.
Strip charts show a gap in the data when not taking data.
Capacitors
    Capacitor charges are be blue for negative, red for positive.
    Square plates are 3d
    Area is a function of capacitance.

3.01.06 (7-7-2006)
Charts can now be removed.
Bugfix: Charts don't show any data, when first data points are out of range.
Bugfix: Time-series charts looked non-smooth for simple AC RC circuit
>>We can no longer have simulation time dynamic because it destroys smoothness of the plots; converted to static.
Added x and y axis labels for the stripcharts.
Added the Voltage chart: a 2-terminal version of the current meter.
Added a timer.

3.01.05 (7-5-2006)
Bugfix: When you charge a capacitor and completely disconnect if, the capacitor loses all its charge.
Added readout for inductors.
Added component editor for inductors.
Bugfix: 'Advanced' border title disappears on control panel when expanding the advanced panel.
Added schematic view for inductors.
Increased spacing between buttons at the bottom of CCK control panel.
Add a per-component menu item for clearing capacitors & inductors?

Version 3.01.04 (6-26-2006)
Added spanish for new components.
Bugfix: Capacitor clip should disappear when capacitors disappear.

Version 3.01.03 (6-24-2006)
Added a floating graph components for reading current.
Added inductors.

Version 3.01.02 (6-22-2006)
Added charge and current graphics for capacitors.
Bugfix: There is some text near the top left of the screen; we can see the descenders dropping down.
Added schematic ac graphic

Version 3.01.01
Added save/load for AC & Capacitors.
Added readout graphics for AC

Version 3.01.00 (6-19-2006)
Rewrote circuit analysis algorithm.
Bugfix: Help panel was gone.
Added capacitors and AC

Version 3.49 (4-17-2006)